# ChessServer

./: .gitattributes  .gitignore  chessGame.sln
chessGame/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  CheckEvaluator.cpp  CheckEvaluator.h  GameRoom.cpp  GameRoom.h  Move.h  MoveGenerator.cpp  MoveValidator.cpp  NetworkPlayer.cpp  NetworkPlayer.h  Player.cpp  Player.h  PlayerIdGenerator.h  RoomManager.cpp  RoomManager.h  Rules.cpp  Session.cpp  Session.h  StockfishEngine.cpp  StockfishEngine.h  chessGame.vcxproj  chessGame.vcxproj.filters  main.cpp
chessGame/core/: Board.cpp  Board.h  CheckEvaluator.cpp  CheckEvaluator.h  Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveValidator.cpp  MoveValidator.h  Piece.h
chessGame/db/: Database.cpp  Database.h
chessGame/game/: AIPlayer.cpp  AIPlayer.h  GameRoom.cpp  GameRoom.h  NetworkPlayer.cpp  NetworkPlayer.h  Player.cpp  Player.h  PlayerIdGenerator.cpp  PlayerIdGenerator.h  RoomManager.cpp  RoomManager.h  StockfishEngine.cpp  StockfishEngine.h  TimeControl.h
chessGame/lesson/: LessonController.cpp  LessonController.h  LessonStep.h
chessGame/net/: Server.cpp  Server.h  Session.cpp  Session.h
chessGame/rules/: Perft.cpp  Perft.h  Rules.cpp  Rules.h
chessGame/src/: main.cpp
